<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsInterceptor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="LoginScreen">Login Screen:</string>
    <string name="LoginBtn">Login</string>
    <string name="Credentials">Username: admin / Password: admin</string>
    <string name="attempts">Attempts Left:</string>

    <string name="monitorLabel">Enter the telephone number of the monitoring device: </string>
    <string name="phoneNum_hint">ex. 5554245595</string>
    <string name="nextBtn">NEXT</string>

    <string name="name_label">Enter Contact Name:</string>
    <string name="name_hint">ex. John Smith</string>
    <string name="phone_hint">ex. 1234593421</string>

    <string name="phone_label">Enter Phone Number:</string>
    <string name="sms_label">Enter SMS Message:</string>
    <string name="send_sms_label">Send SMS</string>

    <string name="Capture">Capture</string>
</resources>
